tests/invalid/Old_Invalid_3.whiley
method m(&int p):
    //
    int x = old(*p)